# thunderstore-cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Defaults.cs  Options.cs  PackageManifestV1.cs  Paths.cs  Program.cs  README.md  ThunderstoreCLI.csproj  ThunderstoreCLI.sln  TomlUtils.cs  TommyCustomization.cs  rustfmt.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: publish.yml  release.yml  test.yml
Commands/: BuildCommand.cs  InitCommand.cs  PublishCommand.cs
Config/: BaseConfig.cs  CLIParameterConfig.cs  Config.cs  EmptyConfig.cs  EnvironmentConfig.cs  IConfigProvider.cs  ProjectFileConfig.cs  UserFileConfig.cs  Validator.cs
Properties/: Resources.Designer.cs  Resources.resx  launchSettings.json
ThunderstoreCLI/: .editorconfig  Defaults.cs  Options.cs  PackageManifestV1.cs  Program.cs  ThunderstoreCLI.csproj  UpdateChecker.cs  dsp.yml  ror2.yml
ThunderstoreCLI.Tests/: NoParallel.cs  ThunderstoreCLI.Tests.csproj
ThunderstoreCLI.Tests/Models/: BaseJson.cs
ThunderstoreCLI.Tests/Utils/: Comparers.cs  MiscUtils.cs  Spinner.cs  StringUtils.cs  TomlUtils.cs  Write.cs
ThunderstoreCLI/API/: ApiHelper.cs
ThunderstoreCLI/Commands/: BuildCommand.cs  CommandValidator.cs  ImportGameCommand.cs  InitCommand.cs  InstallCommand.cs  ListCommand.cs  PublishCommand.cs  RunCommand.cs  UninstallCommand.cs
ThunderstoreCLI/Config/: BaseConfig.cs  CLIParameterConfig.cs  Config.cs  EmptyConfig.cs  EnvironmentConfig.cs  IConfigProvider.cs  ProjectFileConfig.cs  Validator.cs
ThunderstoreCLI/Configuration/: BaseConfig.cs  CLIParameterConfig.cs  Config.cs  DefaultConfig.cs  DotEnv.cs  EmptyConfig.cs  EnvironmentConfig.cs  IConfigProvider.cs  ProjectFileConfig.cs  Validator.cs
ThunderstoreCLI/Game/: BepInExManager.cs  GameDefinition.cs  InstallHelpers.cs  ModManager.cs  ModProfile.cs
ThunderstoreCLI/Models/: BaseJson.cs  BaseToml.cs  BaseYaml.cs  ISerialize.cs  PackageListingV1.cs  PublishModels.cs  R2mmGameDescription.cs  SchemaResponse.cs  ThunderstoreProject.cs
ThunderstoreCLI/Models/Interaction/: BaseInteraction.cs
ThunderstoreCLI/Plugins/: PluginManager.cs
ThunderstoreCLI/Properties/: Resources.Designer.cs  Resources.resx
ThunderstoreCLI/Utils/: ActionUtils.cs  CommandFatalException.cs  Comparers.cs  DictionaryExtensions.cs  DownloadCache.cs  MiscUtils.cs  ModDependencyTree.cs  RequestBuilder.cs  Spinner.cs  SteamUtils.cs  StringUtils.cs  TomlUtils.cs  Write.cs
Utils/: MiscUtils.cs  TomlUtils.cs  Write.cs
crates/tcli/: Cargo.toml
crates/tcli-bepinex-installer/: Cargo.toml
crates/tcli/src/: cli.rs  config.rs  error.rs  main.rs  ui.rs
crates/tcli/src/game/: eadesktop.rs  ecosystem.rs  egs.rs  gamepass.rs  mod.rs  registry.rs
crates/tcli/src/game/win/: gamepass.rs
crates/tcli/src/package/: cache.rs  error.rs  index.rs  mod.rs  resolver.rs
crates/tcli/src/package/install/: api.rs  legacy_compat.rs  manifest.rs  mod.rs
crates/tcli/src/package/install/runner/: mod.rs  python.rs  request.rs  response.rs
crates/tcli/src/profile/: mod.rs
crates/tcli/src/project/: lock.rs  manifest.rs  mod.rs  overrides.rs  publish.rs
crates/tcli/src/ts/: error.rs  mod.rs  package.rs  package_manifest.rs  version.rs
crates/tcli/src/ts/experimental/: mod.rs  package.rs  publish.rs
crates/tcli/src/ts/experimental/models/: package.rs  publish.rs
crates/tcli/src/ts/models/: package.rs
crates/tcli/src/ts/package_reference/: mod.rs
crates/tcli/src/ts/package_reference/ser/: table.rs
crates/tcli/src/ts/v1/: ecosystem.rs  mod.rs  package.rs
crates/tcli/src/ts/v1/models/: ecosystem.rs  mod.rs  package.rs
crates/tcli/src/ui/: mod.rs  reporter.rs
crates/tcli/src/util/: mod.rs  os.rs  temp_file.rs
resources/: readme_template.md
src/: cli.rs  config.rs  error.rs  main.rs
src/game/: ecosystem.rs  steam.rs
src/game/win/: egs.rs  mod.rs
src/package/: cache.rs  index.rs  mod.rs  resolver.rs
src/package/install/: api.rs  mod.rs
src/project/: lock.rs  mod.rs  overrides.rs
src/ts/: package_manifest.rs  version.rs
src/ts/experimental/: index.rs  mod.rs  package.rs  publish.rs
src/ts/experimental/models/: mod.rs  package.rs
src/ts/package_reference/ser/: mod.rs  string_array.rs
src/ts/v1/: ecosystem.rs  package.rs
src/ts/v1/models/: package.rs
tcli-bepinex-installer/: Cargo.toml
tcli-bepinex-installer/.cargo/: config.toml
tcli-bepinex-installer/src/: main.rs
