[package]
name = "tcli-bepinex-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
zip = "0.6.2"
thiserror = "1.0.31"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }

[dependencies.clap]
version = "3.1.18"
features = ["derive", "cargo"]

[profile.release]
lto = true
strip = true
