[package]
name = "tcli-bepinex-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
zip = "0.6.2"
thiserror = "1.0.37"
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }

[dependencies.clap]
version = "4.0.9"
features = ["derive", "cargo"]

[profile.release]
lto = true
strip = true
