[package]
name = "tcli"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive", "color"] }
futures = "0.3"
futures-util = "0.3"
once_cell = "1.17"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.3"
thiserror = "1.0"
toml = "0.7.3"
tokio = { version = "1.27", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
walkdir = "2.3"
zip = "0.6"
md-5 = "0.10"
base64 = "0.21"
indicatif = { version = "0.17.3", features = ["improved_unicode", "tokio"] }
directories = "5.0.1"
colored = "2.0.0"
async-trait = "0.1.68"
async_zip = { version = "0.0.15", features = ["full"] }
