[package]
name = "tcli"
version = "0.3.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
once_cell = "1.17"
reqwest = { version = "0.11", features = ["json", "stream"] }
colored = "2.0.0"
itertools = "0.11.0"
wildmatch = "2.1.1"

# async runtime and helpers
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.27", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1.68"
async_zip = { version = "0.0.15", features = ["full"] }
indicatif = { version = "0.17.3", features = ["improved_unicode", "tokio"] }

# parsers, serializations, and other data processing
clap = { version = "4.2", features = ["derive", "color"] }
figment = { version = "0.10.10", features = ["env", "toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.3"
toml = "0.7.3"
md-5 = "0.10"
base64 = "0.21"

# files, directories, and other fs operations
walkdir = "2.3"
zip = "0.6"
directories = "5.0.1"
steamlocate = "2.0.0-alpha.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"
